--- a/task6less.ipynb
+++ b/task6less.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "711afa30",
+   "id": "0be833eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "89ee0b2d",
+   "id": "4afa2772",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "25df84e1",
+   "id": "8bef360b",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ab62f004",
+   "id": "16a76e3c",
    "metadata": {},
    "outputs": [
     {
@@ -123,14 +123,14 @@
     }
    ],
    "source": [
-    "#price is highly corelated with rooms\n",
+    "#price is highly corelated with rooms and negatively corelated with year built\n",
     "df1.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "02efb238",
+   "id": "c75cd863",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "62052601",
+   "id": "864f7e7d",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5315b94c",
+   "id": "7a662f2a",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "442eedfc",
+   "id": "1cec9019",
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c96cdc96",
+   "id": "6523d74c",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "4e378cc0",
+   "id": "14c70976",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5d4bda6b",
+   "id": "344aa867",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "28382fb4",
+   "id": "2e6b0b22",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b791e25f",
+   "id": "247a8663",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a1ce4910",
+   "id": "40cdeeb5",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "88ed4c88",
+   "id": "0068891e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "689ae466",
+   "id": "9a90e1a3",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "e79176bd",
+   "id": "81990f3c",
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "b45790f9",
+   "id": "fead22b8",
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "7adf5c8a",
+   "id": "30da21ab",
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "c3a0e36d",
+   "id": "47cdc5f3",
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "6e774343",
+   "id": "30db7454",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "2174ef7f",
+   "id": "da076ca2",
    "metadata": {},
    "outputs": [
     {
@@ -1042,8 +1042,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "id": "f8e74502",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3,  2,  6,  4,  1,  5,  7,  8, 11, 10, 12,  9, 31, 16],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2['Rooms'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "15358bfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        False\n",
+      "1        False\n",
+      "2        False\n",
+      "3        False\n",
+      "4        False\n",
+      "         ...  \n",
+      "63018    False\n",
+      "63019    False\n",
+      "63020    False\n",
+      "63021    False\n",
+      "63022    False\n",
+      "Name: Rooms, Length: 63023, dtype: bool\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df2['Rooms']>10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e06f0537",
+   "id": "e2b808ca",
    "metadata": {},
    "outputs": [],
    "source": []
